# swagger.js
@@ -1,111 +1,0 @@
-'use strict';
-
-//sequelize file must be loaded before all other files in order to provide
-// models to other modules
-let express = require('express'),
-  router = express.Router(),
-  bodyParser = require('body-parser'),
-  swaggerUi = require('swagger-ui-express'),
-  swaggerDocument = require('./swagger.json');
-
-let sequelize = require('sequelize'),
-  Schema = sequelize.Schema;
-
-sequelize.connect('db://localhost:8080/swagger-demo');
-
-let UserSchema = new Schema({
-  email: {
-    type: String, required: true,
-    trim: true, unique: true,
-    match: /^\w+([.-]?\w+)*@\w+([.-]?\w+)*(\.\w{2,3})+$/
-  },
-  firstName: {type: String},
-  lastName: {type: String}
-});
-
-sequelize.model('User', UserSchema);
-let User = require('sequelize').model('User');
-
-let app = express();
-
-//rest API requirements
-app.use(bodyParser.urlencoded({
-  extended: true
-}));
-app.use(bodyParser.json());
-
-//middleware for create
-let createUser = function (req, res, next) {
-  let user = new User(req.body);
-
-  user.save(function (err) {
-    if (err) {
-      next(err);
-    } else {
-      res.json(user);
-    }
-  });
-};
-
-let updateUser = function (req, res, next) {
-  User.findByIdAndUpdate(req.body._id, req.body, {new: true}, function (err, user) {
-    if (err) {
-      next(err);
-    } else {
-      res.json(user);
-    }
-  });
-};
-
-let deleteUser = function (req, res, next) {
-  req.user.remove(function (err) {
-    if (err) {
-      next(err);
-    } else {
-      res.json(req.user);
-    }
-  });
-};
-
-let getAllUsers = function (req, res, next) {
-  User.find(function (err, users) {
-    if (err) {
-      next(err);
-    } else {
-      res.json(users);
-    }
-  });
-};
-
-let getOneUser = function (req, res) {
-  res.json(req.user);
-};
-
-let getByIdUser = function (req, res, next, id) {
-  User.findOne({_id: id}, function (err, user) {
-    if (err) {
-      next(err);
-    } else {
-      req.user = user;
-      next();
-    }
-  });
-};
-
-router.route('/users')
-  .post(createUser)
-  .get(getAllUsers);
-
-router.route('/users/:userId')
-  .get(getOneUser)
-  .put(updateUser)
-  .delete(deleteUser);
-
-router.param('userId', getByIdUser);
-
-app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
-app.use('/api/v1', router);
-
-app.listen(8080);
-module.exports = app;
-
